--- a/Comart/src/main/resources/static/index.html
+++ b/Comart/src/main/resources/static/index.html
@@ -86,9 +86,9 @@
                         <a class="collapse-item" href="/listarProductos">Productos</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Crear:</h6>
-                        <a class="collapse-item" href="/grabar">Usuarios</a>
-                        <a class="collapse-item" href="blank.html">Categorías</a>
-                        <a class="collapse-item" href="blank.html">Productos</a>
+                        <a class="collapse-item" href="/nuevoUsuario">Usuarios</a>
+                        <a class="collapse-item" href="/nuevaCategoria">Categorías</a>
+                        <a class="collapse-item" href="/nuevoProducto">Productos</a>
                         <h6 class="collapse-header">Actualizar:</h6>
                         <a class="collapse-item" href="404.html">Usuarios</a>
                         <a class="collapse-item" href="blank.html">Categorías</a>
